[project]
name = "sha-portal-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "connectorx>=0.4.5",
    "fastexcel>=0.20.1",
    "ipykernel>=7.2.0",
    "loguru>=0.7.3",
    "nicegui>=3.11.0",
    "niquests>=3.18.6",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "xlsxwriter>=3.2.9",
]
